# trading-bot

./: .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  .python-style-guide.md  CLAUDE.md  CODE_STYLE_SETUP.md  DATA_MODELS.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_INDEX.md  EXECUTION_FLOW.md  EXECUTION_FLOW_VIEWER.md  IMPLEMENTATION_BACKLOG.md  PRE_COMMIT_SETUP.md  PROJECT_DESIGN.md  PROJECT_REVIEW_COMPLETE.md  PROJECT_ROADMAP.md  QUICK_NAV.md  README.md  SESSION_LOG.md  SESSION_TOPOLOGY.md  STEP1_DIAGNOSIS.md  TASK_MATRIX_DAILY.md  TRIAL_MANIFEST.md  UK_OPERATIONS.md  main.py  pyproject.toml  requirements.txt  run_step1a_functional.ps1  run_step1a_market.ps1  run_step1a_market_if_window.ps1  trading.db  trading_paper.db
.claude/: settings.json  settings.local.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
archive/: ARCH_DECISION_PACKAGE_2026-02-26.md  EXECUTION_FLOW_REVIEW.md  MANIFEST_IMPLEMENTATION.md  PROJECT_STATUS.md  RESEARCH_QUESTIONS.md  RESEARCH_QUESTIONS_2.md  SESSION_SUMMARY_STALEDATA_INVESTIGATION.md  TODO_REVIEW_UK_2026-02-23.md
backtest/: __init__.py  engine.py  walk_forward.py
config/: README.md  settings.py  test_baskets.json  test_regimes.json  uk_correlations.json
configs/: README.md  profile_crypto_btc.json  profile_forex_majors.json  profile_uk_equity.json  trial_aggressive.json  trial_conservative.json  trial_standard.json
docs/: ARCHITECTURE_DECISIONS.md  ASYNC_RUNTIME_HYGIENE_CHECKLIST.md  DATA_PROVIDERS_REFERENCE.md  LPDD_GOVERNANCE.md  MASSIVE_API_REFERENCE.md  MO2F_LANE_POLICY.md  MO2_LIVE_PROGRESS_PROMPT.md  MO2_PROGRESS_PROMPT.md  NON_TEST_PROGRESS_PROMPT.md  NON_TEST_PROGRESS_RUN_2026-02-25.md  NON_TEST_PROGRESS_RUN_2026-02-27.md  OPUS_STEP57_PROMPT.md  OPUS_STEP82_83_PROMPT.md  PROMOTION_CHECKLIST.md  PROMOTION_FRAMEWORK.md  RISK_ARCHITECTURE_REVIEW.md  SESSION_TOPOLOGY.md  SOURCE_REVIEW_RUBRIC.md  STAGED_MASTER_PROMPT.md  UK_TEST_PLAN.md  WEEKLY_REVIEW_TEMPLATE.md  YFINANCE_LOCAL_STORE_FEASIBILITY.md
reports/: execution_dashboard.html
research/: README.md  __init__.py
scripts/: api_server.py  append_step1a_evidence.ps1  async_runtime_hygiene_check.py  daemon.py  daemon_start.sh  offline_harness.py  (+12 more)
(+536 files in other folders)
